# blackjack

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  app_text.py  card.py  classes.py  enums.py  hand.py  strategy.py
src/css/: style.tcss
src/data/: hard_totals.csv  soft_totals.csv  splits.csv
