[tool.poetry]
name = "blackjack"
version = "0.1.0"
description = "A Terminal based Blackjack app. It uses Textual, Rich and Python as a backend."
authors = ["aryan-jain"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
textual = "0.36.0"
textual-dev = "1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
